refactor: use StringUtils.isBlank() for state and country validation
- Added Apache Commons Lang3 dependency (3.17.0)
- Replaced manual null checks with StringUtils.isBlank() in Address.java
- Applied to state field (line 51) and country field (line 53)
- Updated format() method for consistency (lines 72, 78)

Co-authored-by: heandroro <246586785+heandroro@users.noreply.github.com>